--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -9,6 +9,8 @@ $seperator-color: #F4F4F4;
 $border-color: lighten($primary-text-color, 45%);
 $control-background-color: #F2F2F2;
 $secondary-background-color: #E8E8E8;
+$success-color: #66ea81;
+$success-text-color: #357443;
 $warn-color: #FFC46D;
 
 // bootstrap override
